# embassy_template

./: .gitignore  Cargo.toml  README.md  build.rs  cargo-generate.toml
.cargo/: config.toml
src/: main.rs
