[package]
authors = ["RISCV"]
edition = "2021"
readme = "README.md"
name = "RISCV"
version = "0.1.0"

[dependencies]
embedded-hal = "1.0.0"
riscv = {version = "0.13.0", features = ["critical-section-single-hart"]}
riscv-rt = "0.14.0"
riscv-hal = { path = "C:\Users\ugy2kor\Desktop\mindgrove_riscv_hal\mindgrove_riscv_hal-main\riscv_hal"}
riscv-semihosting = { version = "0.1.2" }
panic-halt = "1.0.0"

# this lets you use `cargo fix`!
[[bin]]
name = "RISCV"
test = false
bench = false

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 's'
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false
