[package]
name = "riscv-hal"
authors = ["Imran K <immu0396@gmail.com>"]
repository = "https://github.com/riscv_hal/mindgrove"
categories = ["embedded", "hardware-support", "no-std"]
description = "HAL for the Mindgrove SoC's family of microcontrollers."
keywords = ["riscv", "hal"]
license = "MIT"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-hal = "1.0.0"
# riscv = { git = "https://github.com/rust-embedded/riscv", branch = "rvrt-patch", features = [
#     "critical-section-single-hart",
# ] }
riscv = {version = "0.13.0", features = ["critical-section-single-hart"]}
# riscv-rt = { git = "https://github.com/rust-embedded/riscv", branch = "rvrt-patch" }
riscv-rt = "0.14.0"
panic-halt = "1.0.0"
riscv-hal = { path = "C:\Users\ugy2kor\Desktop\mindgrove_riscv_hal\mindgrove_riscv_hal-main\riscv_hal"}
riscv-semihosting = { version = "0.1.2" }
embedded-hal-nb = "1.0.0"
critical-section = "1.2.0"

embassy-executor = { version = "0.9.1", features = [
    "arch-riscv32",
    "executor-thread",
] }
# riscv-hal = { path = "../Desktop/mindgrove_riscv_hal/riscv_hal" }
# Note: CLINT MTIMER always runs at CPU freq, thus this needs to match CPU FREQ
# But CPU freq is configurable, so defer tick rate choice to binary
embassy-time = { version = "0.5.0", features = ["tick-hz-100_000_000"] }
embassy-time-driver = { version = "0.2.1", optional = true }
embassy-sync = "0.7.2"
embassy-time-queue-utils = { version = "0.3.0", optional = true }

[features]
default = ["time-driver"]
time-driver = ["dep:embassy-time-driver", "dep:embassy-time-queue-utils"]
